services/S9-Integrations/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-prioritization
  labels:
    app.kubernetes.io/name: test-prioritization
    app.kubernetes.io/part-of: test-prioritization-platform
